add policy definition to archetype

--- a/lib/archetype_definitions/bdoapp1.alz_archetype_definition.json
+++ b/lib/archetype_definitions/bdoapp1.alz_archetype_definition.json
@@ -4,7 +4,9 @@
     "policy_assignments": [
       "Block-VM-SKU-Sizes"
     ],
-    "policy_definitions": [],
+    "policy_definitions": [
+      "Block-VM-SKU-Sizes"
+    ],
     "policy_set_definitions": [],
     "role_definitions": []
   }
